--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,8 @@
         "@typescript-eslint"
     ],
     "rules": {
+      "no-use-before-define": "off",
+      "@typescript-eslint/no-use-before-define": "off",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
       "react/jsx-filename-extension": [
